--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 html{
-	background: url(../imagenes/fondoprueba1.jpg) no-repeat center center fixed;
+	background: url(../imagenes/fondo1.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -18,7 +18,8 @@ html{
   float: right;
 }*/
 body {
-  padding-top: 50px;
+   
+  padding-top: 80px;
   width: 100%;
 }
 .cajita{
