cambios en principal, header y nuevo... el buscar todavia no anda

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -118,7 +118,7 @@ button,
 input,
 optgroup,
 select,
-textarea {//agregue mas columnas por si las moscas
+textarea {
   columns: 100;
   margin: 0;
   font: inherit;
